manifests/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
spec:
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
      - name: memos
        image: neosmemo/memos:0.30.0
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 5230
        volumeMounts:
          - name: data
            mountPath: /var/opt/memos
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5230
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5230
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
