manifests/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
spec:
  type: ClusterIP
  selector:
    app: memos
  ports:
  - name: http
    port: 5230
    targetPort: 5230
